--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
     </header>
 <div class="main-background"></div>
 
-
+<div class="flexbox">
+    <div class="box">
+<div class="number-title">1.</div>
+    </div>
+    <div class="box">
+        <div class="number-title">2.</div>
+    </div>
+    <div class="box">
+        <div class="number-title">3.</div>
+    </div>
+</div>
 
 
 </body>
