--- a/index.html
+++ b/index.html
@@ -13,20 +13,26 @@
     <header>
         <div class="navbar"></div>
     </header>
-<div class="main-background"></div>
+    <div class="main-background">
+        <h1 class="main-text">Site de test /<span class="main-text-weight">/ HTML CSS</span></h1>
+    </div>
 
-<div class="flexbox">
-    <div class="box">
-<div class="number-title">1.</div>
+    <div class="flexbox">
+        <div class="box">
+            <div class="number-title">1.</div>
+            <img class="img-box"
+                src="/img/kisspng-recruitment-job-human-resource-flat-design-interviewgo-5d44fff1d99f85.2210022015648030578914.png">
+        </div>
+        <div class="box">
+            <div class="number-title">2.</div>
+            <img class="img-box" src="/img/PinClipart.com_supply-and-demand-clipart_5678676.png">
+        </div>
+        <div class="box">
+            <div class="number-title">3.</div>
+            <img class="img-box" src="/img/PngItem_3337549.png">
+        </div>
     </div>
-    <div class="box">
-        <div class="number-title">2.</div>
-    </div>
-    <div class="box">
-        <div class="number-title">3.</div>
-    </div>
-</div>
-
 
 </body>
+
 </html>
