--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main-background">
         <h1 class="main-text">Site de test /<span class="main-text-weight">/ HTML CSS</span></h1>
     </div>
-
+    
     <div class="flexbox">
         <div class="box">
             <div class="number-title">1.</div>
@@ -33,6 +33,10 @@
         </div>
     </div>
 
-</body>
+    <div class="form">
+        
 
+    </div>
+
+</body>
 </html>
