--- a/html/contact.html
+++ b/html/contact.html
@@ -12,12 +12,10 @@
 <body>
     <header>
         <div class="navbar">
-            <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
+           <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
             <ul class="link-navbar">
                 <li><a class="link-title" href="/html/index.html">Accueil</a></li>
-                <li><a class="link-title" href="/html/Projets.html">Mes Projets</a></li>
-                <li><a class="link-title" href="/html/Exercices.html">Exercices</a></li>
-                <li><a class="link-title" href="/html/contact.html">Contact</a></li>
+                <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
             </ul>
         </div>
     </header>
