--- a/html/index.html
+++ b/html/index.html
@@ -12,12 +12,10 @@
 <body>
     <header>
         <div class="navbar">
-            <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
+           <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
             <ul class="link-navbar">
                 <li><a class="link-title" href="/html/index.html">Accueil</a></li>
-                <li><a class="link-title" href="/html/Projets.html">Mes Projets</a></li>
-                <li><a class="link-title" href="/html/Exercices.html">Exercices</a></li>
-                <li><a class="link-title" href="/html/contact.html">Contact</a></li>
+                <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
             </ul>
         </div>
     </header>
@@ -29,22 +27,9 @@
             <div class="number-title">1.</div>
             <img class="img-box"
                 src="/assets/img/kisspng-recruitment-job-human-resource-flat-design-interviewgo-5d44fff1d99f85.2210022015648030578914.png">
-                <h2 class="sous-title-box">Mes Projets</h2>
-                <a href="/html/Projets.html" class="button-link-box">Accéder</a>
+                <h2 class="sous-title-box">Mes Projets & Exercices</h2>
+                <a href="/html/exercices&projets.html" class="button-link-box">Accéder</a>
         </div>
-        <div class="box">
-            <div class="number-title">2.</div>
-            <img class="img-box" src="/assets/img/PinClipart.com_supply-and-demand-clipart_5678676.png">
-            <h2 class="sous-title-box" >Exercices</h2>
-            <a href="/html/Exercices.html" class="button-link-box">Accéder</a>
-        </div>
-        <div class="box">
-            <div class="number-title">3.</div>
-            <img class="img-box" src="/assets/img/—Pngtree—modern flat design concept of_5332905.png">
-            <h2 class="sous-title-box">Contact</h2>
-            <a href="/html/contact.html" class="button-link-box">Accéder</a>
-        </div>
-    </div>
 
 </body>
 
