Add root etc...

--- a/html/js-home.html
+++ b/html/js-home.html
@@ -23,7 +23,10 @@
     <div class="main-background">
         <h1 class="main-text">Mes projets & exercices en<br><span class="main-text-stroke">Javascript</span></h1>
     </div>
-    <div class="flexbox">
+
+
+    <h1 class="title-noprojects">Pas encore de projets ! :-( </h1>
+    <!-- <div class="flexbox">
         <div class="box">
             <div class="number-title">1.</div>
                 <h2 class="sous-title-box text-html">Projet Titre</h2>
@@ -44,7 +47,7 @@
             <h2 class="sous-title-box">Projet Titre</h2>
             <a href="/html/design-home.html" class="button-link-box">Voir le projet</a>
         </div>
-    </div>
+    </div> -->
 
 </body>
 
