Add root etc...

--- a/html/design-home.html
+++ b/html/design-home.html
@@ -12,23 +12,27 @@
 <body>
     <header>
         <div class="navbar">
-           <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
-            <ul class="link-navbar">
-                <li><a class="link-title" href="/html/index.html">Accueil</a></li>
-                <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
-            </ul>
+            <div class="box-navbar">
+                <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
+                <ul class="link-navbar">
+                    <li><a class="link-title" href="/html/index.html">Accueil</a></li>
+                    <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
     <div class="main-background">
-        <h1 class="main-text">Mes projets & exercices en<br><span class="main-text-stroke">Design</span></h1>
+        <h1 class="main-text">Mes projets & exercices en<br><span class="main-text-stroke">Design & UX / UI</span></h1>
     </div>
 
 
 
 
-
-    <h1 class="title-noprojects">Pas encore de projets ! :-( </h1>
+    <div class="box-noprojects">
+        <h1 class="title-noprojects">Pas encore de projets ! :-( </h1>
+        <a class="button-returntohome" href="/html/exercices&projets.html">Retour vers Exercices & Projets</a>
+    </div>
     <!-- <div class="flexbox">
         <div class="box">
             <div class="number-title">1.</div>
