--- a/html/exercices&projets.html
+++ b/html/exercices&projets.html
@@ -12,11 +12,13 @@
 <body>
     <header>
         <div class="navbar">
-           <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
-            <ul class="link-navbar">
-                <li><a class="link-title" href="/html/index.html">Accueil</a></li>
-                <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
-            </ul>
+            <div class="box-navbar">
+                <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
+                <ul class="link-navbar">
+                    <li><a class="link-title" href="/html/index.html">Accueil</a></li>
+                    <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
@@ -34,14 +36,9 @@
             <h2 class="sous-title-box text-js" >Javascript</h2>
             <a href="/html/js-home.html" class="button-link-box">Accéder</a>
         </div>
-        <div class="box box-ux-ui">
-            <div class="number-title">3.</div>
-            <h2 class="sous-title-box text-ux-ui">UX // UI</h2>
-            <a href="/html/ux-ui-home.html" class="button-link-box">Accéder</a>
-        </div>
         <div class="box box-design">
-            <div class="number-title">4.</div>
-            <h2 class="sous-title-box">Design</h2>
+            <div class="number-title">3.</div>
+            <h2 class="sous-title-box">Design & UX/UI</h2>
             <a href="/html/design-home.html" class="button-link-box">Accéder</a>
         </div>
     </div>
