--- a/html/contact.html
+++ b/html/contact.html
@@ -12,11 +12,13 @@
 <body>
     <header>
         <div class="navbar">
-           <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
-            <ul class="link-navbar">
-                <li><a class="link-title" href="/html/index.html">Accueil</a></li>
-                <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
-            </ul>
+            <div class="box-navbar">
+                <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
+                <ul class="link-navbar">
+                    <li><a class="link-title" href="/html/index.html">Accueil</a></li>
+                    <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     </header>
