--- a/html/html-css-home.html
+++ b/html/html-css-home.html
@@ -12,11 +12,13 @@
 <body>
     <header>
         <div class="navbar">
-           <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
-            <ul class="link-navbar">
-                <li><a class="link-title" href="/html/index.html">Accueil</a></li>
-                <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
-            </ul>
+            <div class="box-navbar">
+                <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
+                <ul class="link-navbar">
+                    <li><a class="link-title" href="/html/index.html">Accueil</a></li>
+                    <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
@@ -24,7 +26,10 @@
         <h1 class="main-text">Mes projets & exercices en<br><span class="main-text-stroke">HTML // CSS</span></span></h1>
     </div>
 
-    <h1 class="title-noprojects">Pas encore de projets ! :-( </h1>
+    <div class="box-noprojects">
+        <h1 class="title-noprojects">Pas encore de projets ! :-( </h1>
+        <a class="button-returntohome" href="/html/exercices&projets.html">Retour vers Exercices & Projets</a>
+    </div>
     <!-- <div class="flexbox">
         <div class="box">
             <div class="number-title">1.</div>
