Add root etc...

--- a/html/html-css-home.html
+++ b/html/html-css-home.html
@@ -23,7 +23,8 @@
     </header>
 
     <div class="main-background">
-        <h1 class="main-text">Mes projets & exercices en<br><span class="main-text-stroke">HTML // CSS</span></span></h1>
+        <h1 class="main-text">Mes projets & exercices en<br><span class="main-text-stroke">HTML // CSS</span></span>
+        </h1>
     </div>
 
     <div class="box-noprojects">
