--- a/html/index.html
+++ b/html/index.html
@@ -6,18 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <script type="text/javascript" src="/assets/js/script.js"></script>
     <title>AFPA Projet 1</title>
 </head>
 
 <body>
- 
     <header>
         <div class="navbar">
             <div class="box-navbar">
-                <img src="/assets/img/logo-site-2.png" href="/html/contact.html" class="logo">
+                <svg href="/html/contact.html" class="logo" width="100%" height="100%" viewBox="0 0 114 54" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                    <g transform="matrix(1,0,0,1,-197.673,-864.717)">
+                        <g transform="matrix(0.0766712,0,0,0.0766712,182.517,848.138)">
+                            <g>
+                                <g transform="matrix(1,0,0,1,-23.9882,5.68434e-14)">
+                                    <path d="M572.825,216.238C766.637,216.238 923.988,373.589 923.988,567.402C923.988,761.214 766.637,918.565 572.825,918.565C379.012,918.565 221.661,761.214 221.661,567.402C221.661,373.589 379.012,216.238 572.825,216.238ZM572.825,365.66C684.169,365.66 774.567,456.057 774.567,567.402C774.567,678.746 684.169,769.144 572.825,769.144C461.48,769.144 371.083,678.746 371.083,567.402C371.083,456.057 461.48,365.66 572.825,365.66Z"/>
+                                </g>
+                                <g transform="matrix(1,0,0,4,-33.7415,-2755.7)">
+                                    <path d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z"/>
+                                </g>
+                                <g transform="matrix(1,0,0,4,291.909,-2755.7)">
+                                    <path d="M1387.43,742.984L1231.32,742.984L991.921,918.565L1148.04,918.565L1387.43,742.984Z"/>
+                                </g>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
                 <ul class="link-navbar">
                     <li><a class="link-title" href="/html/index.html">Accueil</a></li>
                     <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
+                    <div class="theme-switch-wrapper">
+						<label class="theme-switch" for="checkbox">
+							<input type="checkbox" id="checkbox" />
+							<div class="slider round"></div>
+						</label>
+					</div>
                 </ul>
             </div>
         </div>
