--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <script type="text/javascript" src="/assets/js/script.js"></script>
-    <title>AFPA Projet 1</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://code.jquery.com/jquery-3.6.0.js"
+            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+        <link rel="stylesheet" href="/assets/css/exercices&projets.css">
+        <script type="text/javascript" src="/assets/js/script.js"></script>
+        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+        <!-- or -->
+        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+        <title>AFPA Projet 1</title>
+    </head>
 
 <body>
     <header>
@@ -34,12 +40,6 @@
                 <ul class="link-navbar">
                     <li><a class="link-title" href="/html/index.html">Accueil</a></li>
                     <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
-                    <div class="theme-switch-wrapper">
-						<label class="theme-switch" for="checkbox">
-							<input type="checkbox" id="checkbox" />
-							<div class="slider round"></div>
-						</label>
-					</div>
                 </ul>
             </div>
         </div>
