--- a/html/landing.html
+++ b/html/landing.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-    <link rel="stylesheet" href="/assets/css/exercices&projets.css">
+    <link rel="stylesheet" href="/assets/css/landing.css">
     <script type="text/javascript" src="/assets/js/script.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <!-- or -->
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="navbar">
             <div class="box-navbar">
@@ -52,55 +51,8 @@
         </div>
     </header>
 
-    
-
     <div class="main-background">
-        <h1 class="main-text">Exercices & Projets</span></h1>
-    </div>
-
-
-    <div class="container">
-                <div class="gallery_filter_tab">
-                    <ul class="list-inline">
-                        <li class="list-inline-item ">
-                            <a href="javascript:void(0);" class="filter-button active" data-filter="all">Tout</a>	            				
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="javascript:void(0);" class="filter-button" data-filter="HTML">HTML / CSS</a>	            				
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="javascript:void(0);" class="filter-button" data-filter="JS">Javascript</a>	            				
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="javascript:void(0);" class="filter-button" data-filter="Design">Design</a>	            				
-                        </li>
-                    </ul>
-                </div> 
-    </div>
-
-
-    <div class="row no-gutters">
-
-        <div class="filter HTML">
-            <!-- <img src="http://fakeimg.pl/365x365/" class="img-fluid">   -->
-        </div>
-
-        <div class="filter Design">
-        </div>
-        
-        <div class="filter HTML">
-        </div>
-
-        <div class="filter HTML">
-        </div>
-
-        <div class="filter JS">
-        </div>
-
-        <div class="filter JS">
-        </div>
-        <div class="filter Design">
-        </div>
+        <h1 class="main-text">Site de test /<span class="main-text-weight">/ HTML CSS</span></h1>
     </div>
 
 </body>
