--- a/html/exercices&projets.html
+++ b/html/exercices&projets.html
@@ -52,7 +52,7 @@
         </div>
     </header>
 
-    
+
 
     <div class="main-background">
         <h1 class="main-text">Exercices & Projets</span></h1>
@@ -60,46 +60,60 @@
 
 
     <div class="container">
-                <div class="gallery_filter_tab">
-                    <ul class="list-inline">
-                        <li class="list-inline-item ">
-                            <a href="javascript:void(0);" class="filter-button active" data-filter="all">Tout</a>	            				
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="javascript:void(0);" class="filter-button" data-filter="HTML">HTML / CSS</a>	            				
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="javascript:void(0);" class="filter-button" data-filter="JS">Javascript</a>	            				
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="javascript:void(0);" class="filter-button" data-filter="Design">Design</a>	            				
-                        </li>
-                    </ul>
-                </div> 
+        <div class="gallery_filter_tab">
+            <ul class="list-inline">
+                <li class="list-inline-item ">
+                    <a href="javascript:void(0);" class="filter-button active" data-filter="all">Tout</a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="javascript:void(0);" class="filter-button" data-filter="HTML">HTML / CSS</a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="javascript:void(0);" class="filter-button" data-filter="JS">Javascript</a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="javascript:void(0);" class="filter-button" data-filter="Design">Design</a>
+                </li>
+            </ul>
+        </div>
     </div>
 
+    <div class="box-flexbox">
+        <div class="row">
+            <div class="filter HTML">
+                <!-- <img src="http://fakeimg.pl/365x365/" class="img-fluid">   -->
+                HTML
+                <li><a class="button-access-project">Accéder au projet</a></li>
+            </div>
 
-    <div class="row no-gutters">
+            <div class="filter Design">
+                DESIGN
+                <li><a class="button-access-project">Accéder au projet</a></li>
+            </div>
 
-        <div class="filter HTML">
-            <!-- <img src="http://fakeimg.pl/365x365/" class="img-fluid">   -->
-        </div>
+            <div class="filter HTML">
+                HTML
+                <li><a class="button-access-project">Accéder au projet</a></li>
+            </div>
 
-        <div class="filter Design">
-        </div>
-        
-        <div class="filter HTML">
-        </div>
+            <div class="filter HTML">
+                HTML
+                <li><a class="button-access-project">Accéder au projet</a></li>
+            </div>
 
-        <div class="filter HTML">
-        </div>
+            <div class="filter JS">
+                JS
+                <li><a class="button-access-project">Accéder au projet</a></li>
+            </div>
 
-        <div class="filter JS">
-        </div>
-
-        <div class="filter JS">
-        </div>
-        <div class="filter Design">
+            <div class="filter JS">
+                JS
+                <li><a class="button-access-project">Accéder au projet</a></li>
+            </div>
+            <div class="filter Design">
+                DESIGN
+                <li><a class="button-access-project">Accéder au projet</a></li>
+            </div>
         </div>
     </div>
 
