--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
     </header>
 
     <div class="main-background">
-        <h1 class="main-text">Site de test /<span class="main-text-weight">/ HTML CSS</span></h1>
+        <h1 class="main-text">Portfolio /<span class="main-text-weight">/ Killian B</span></h1>
     </div>
     <div class="flexbox">
         <div class="box">
