--- a/html/exo/projet-1-html.html
+++ b/html/exo/projet-1-html.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-    <link rel="stylesheet" href="/assets/css/exercices&projets.css">
+    <link rel="stylesheet" href="/assets/css/projects.css">
     <script type="text/javascript" src="/assets/js/script.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <!-- or -->
@@ -55,67 +55,11 @@
 
 
     <div class="main-background">
-        <h1 class="main-text">Exercices & Projets</span></h1>
+        <h1 class="main-text">Projet 1</span></h1>
     </div>
 
+    
 
-    <div class="container">
-        <div class="gallery_filter_tab">
-            <ul class="list-inline">
-                <li class="list-inline-item ">
-                    <a href="javascript:void(0);" class="filter-button active" data-filter="all">Tout</a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="javascript:void(0);" class="filter-button" data-filter="HTML">HTML / CSS</a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="javascript:void(0);" class="filter-button" data-filter="JS">Javascript</a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="javascript:void(0);" class="filter-button" data-filter="Design">Design</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="box-flexbox">
-        <div class="row">
-            <div class="filter HTML">
-                <!-- <img src="http://fakeimg.pl/365x365/" class="img-fluid">   -->
-                HTML
-                <li><a href="/html/exo/projet-1-html.html" class="button-access-project">Accéder au projet</a></li>
-            </div>
-
-            <div class="filter Design">
-                DESIGN
-                <li><a class="button-access-project">Accéder au projet</a></li>
-            </div>
-
-            <div class="filter HTML">
-                HTML
-                <li><a class="button-access-project">Accéder au projet</a></li>
-            </div>
-
-            <div class="filter HTML">
-                HTML
-                <li><a class="button-access-project">Accéder au projet</a></li>
-            </div>
-
-            <div class="filter JS">
-                JS
-                <li><a class="button-access-project">Accéder au projet</a></li>
-            </div>
-
-            <div class="filter JS">
-                JS
-                <li><a class="button-access-project">Accéder au projet</a></li>
-            </div>
-            <div class="filter Design">
-                DESIGN
-                <li><a class="button-access-project">Accéder au projet</a></li>
-            </div>
-        </div>
-    </div>
 
 </body>
 
