--- a/html/landing.html
+++ b/html/landing.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!-- <header>
+    <header>
         <div class="navbar">
             <div class="box-navbar">
                 <svg href="/html/contact.html" class="logo" width="100%" height="100%" viewBox="0 0 114 54"
@@ -49,17 +49,14 @@
                 </ul>
             </div>
         </div>
-    </header> -->
+    </header>
 
-    <div class="box-leftright">
-        <div class="main-background">
-        </div>
-            <div>
-                <div class="box-landing">
-                    <h1 class="main-text">Bienvenue <span class="main-text-weight"> sur mon Portfolio</span></h1>
-                    <a href="index.html" class="button-link-landing">Accéder au site</a>
-                </div>
-            </div>
+
+
+    <div class="main-background">
+        <h1 class="main-text">Bienvenue <span class="main-text-weight"> sur mon Portfolio</span></h1>
+        <a href="index.html" class="button-link-landing">Accéder au site</a>
+    </div>
 
 
 </body>
