--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,8 @@
     <header>
         <div class="navbar">
             <div class="box-navbar">
-                <svg href="/html/contact.html" class="logo" width="100%" height="100%" viewBox="0 0 114 54" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                <a href="/html/index.html">
+                <svg class="logo" width="100%" height="100%" viewBox="0 0 114 54" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                     <g transform="matrix(1,0,0,1,-197.673,-864.717)">
                         <g transform="matrix(0.0766712,0,0,0.0766712,182.517,848.138)">
                             <g>
@@ -37,6 +38,7 @@
                         </g>
                     </g>
                 </svg>
+            </a>
                 <ul class="link-navbar">
                     <li><a class="link-title" href="/html/index.html">Accueil</a></li>
                     <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
