--- a/html/contact.html
+++ b/html/contact.html
@@ -8,7 +8,7 @@
         <script src="https://code.jquery.com/jquery-3.6.0.js"
             integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="/assets/css/contact.css">
         <script type="text/javascript" src="/assets/js/script.js"></script>
         <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
         <!-- or -->
@@ -49,15 +49,13 @@
     </header>
 
     <div class="main-background">
-        <h1 class="main-text">Portfolio /<span class="main-text-weight">/ Killian B</span></h1>
+        <h1 class="main-text">Contact</span></h1>
     </div>
     <div class="flexbox">
         <div class="box">
-            <div class="number-title">1.</div>
-            <img class="img-box"
-                src="/assets/img/kisspng-recruitment-job-human-resource-flat-design-interviewgo-5d44fff1d99f85.2210022015648030578914.png">
-            <h2 class="sous-title-box">Mes Projets & Exercices</h2>
-            <a href="/html/exercices&projets.html" class="button-link-box">Accéder</a>
+            <h2 class="title-legal">Email</h2>
+            <li class="email"><a class="myemail ltrText" href="mailto:&#098;&#107;&#046;&#107;&#105;&#108;&#108;&#105;&#097;&#110;&#098;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">moc.liamg@bnaillik.kb</a></li>
+            </a>
         </div>
     </div>
 
