--- a/html/exo/projet-1-html.html
+++ b/html/exo/projet-1-html.html
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <!-- or -->
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-    <title>AFPA Projet 1</title>
+    <title>Portfolio Killian B</title>
 </head>
 
 <body>
@@ -43,6 +43,7 @@
                 <ul class="link-navbar">
                     <li><a class="link-title" href="/html/index.html">Accueil</a></li>
                     <li><a class="link-title" href="/html/exercices&projets.html">Exercices & Projets</a></li>
+                    <li><a class="link-title" href="/html/contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
