--- a/landing.html
+++ b/landing.html
@@ -52,7 +52,7 @@
 
     <div class="main-background">
         <h1 class="main-text">Bienvenue <span class="main-text-weight"> sur mon Portfolio</span></h1>
-        <a href="index.html" class="button-link-landing">Accéder au site</a>
+        <a href="/html/index.html" class="button-link-landing">Accéder au site</a>
     </div>
 
 
